# BasicFit

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
include/: FitterClass.h  FitterInputClass.h
src/: FitterClass.cc  FitterInputClass.cc
utils/: Utils.cc  Utils.h
